source/tests/errors/cannot_access_member.apex
import os
x = 42
os.output(x.field)